--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,32 +35,36 @@
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
-    font-family: 'font-base';
-    scroll-behavior: smooth;
+  font-family: 'font-base';
+  scroll-behavior: smooth;
 }
 
 .button-filled {
-    color: var(--background);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  color: var(--background);
 
-    height: 56px;
-    width: 256px;
+  height: 56px;
+  width: 256px;
 
-    font-size: var(--font-lg);
+  font-size: var(--font-lg);
 
-    background-color: var(--principal);
+  background-color: var(--principal);
 
-    border: 0;
-    border-radius: 10px;
+  border: 0;
+  border-radius: 10px;
 
-    a {
-        color: var(--background) !important;
-    }
+  a {
+      color: var(--background) !important;
+  }
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .button-hollow {
