fixing bug font local

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'font-base';
-    src: url(../fonts/Merriweather.ttf);
+    src: url(/assets/fonts/Merriweather.ttf);
 }
 
 :root {
